JS main file separated from game.html file
- js link added to the end of the layout file to separate it from the
  UI

--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -12,9 +12,12 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/public/static/css/style.css">
+    <link rel="stylesheet" href="/public/static/css/custome.css">
   </head>
 <body>
 	{{template "body"}}
+    <script src="/public/static/js/main.js"></script>
 </body>
 </html>
 {{end}}
