Created foreach to generate buttons for all the letters

--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/public/static/css/custome.css">
   </head>
 <body>
-	{{template "body"}}
+	{{template "body" . }}
     <script src="/public/static/js/main.js"></script>
 </body>
 </html>
