--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -12,28 +12,25 @@
     width: 150px;
     float: left;
     border-radius: 30px;
+    background-color: red;
 }
 
 #bubble1 {
-    display: none;
     margin-left: 260px;
     background-color: rgb(115, 170, 144);
 }
 
 #bubble2 {
-    display: none;
     margin-left: 100px;
     background-color: rgb(129, 167, 98);
 }
 
 #bubble3 {
-    display: none;
     margin-left: 100px;
     background-color: rgb(100, 168, 170);
 }
 
 #bubble4 {
-    display: none;
     margin-left: 100px;
     margin-right: 150px;
     background-color: rgb(91, 133, 173);
@@ -49,22 +46,6 @@
 .cube {
     font-size: 90px;
     text-align: center
-}
-
-#cube1 {
-    
-}
-
-#cube2 {
-    background-color: rgb(141, 175, 113);
-}
-
-#cube3 {
-    background-color: rgb(76, 177, 180);
-}
-
-#cube4 {
-    background-color: rgb(113, 145, 175);
 }
 
 .player-container {
